--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "@types/node": "12.7.0",
     "axios": "^0.19.2",
     "typescript": "^3.7.5"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
