--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "slack-archivist",
   "version": "1.0.0",
   "description": "A Slackbot that archives threads to Discourse and suggests previous threads that may answer a user question",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/main.js",
     "test": "jest"
   },
   "repository": {
