Add --help command
Signed-off-by: Josh Wulf <josh@magikcraft.io>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "test": "jest"
+    "test": "jest",
+    "clean": "rm -rf dist"
   },
   "repository": {
     "type": "git",
