--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - LETSENCRYPT_HOST=slack-archivist.joshwulf.com
       - LETSENCRYPT_EMAIL=josh@magikcraft.io
     volumes:
-      - "../.env:/usr/src/app/.env"
+      - "../.env:/usr/src/app/"
   # This is the network for the nginx proxy
   # See https://github.com/jwulf/letsencrypt-nginx-sidecar
 networks:
