--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@slack/events-api": "^2.3.1",
     "@slack/interactive-messages": "^1.7.0",
     "@slack/web-api": "^5.7.0",
+    "@types/pouchdb-node": "^6.1.3",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "fp-ts": "^2.8.5",
     "io-ts": "^2.2.12",
-    "io-ts-promise": "^2.0.2"
+    "io-ts-promise": "^2.0.2",
+    "pouchdb-find": "^7.2.2",
+    "pouchdb-node": "^7.2.2"
   },
   "devDependencies": {
     "@types/jest": "^25.1.2",
