--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@slack/events-api": "^2.3.1",
     "@slack/interactive-messages": "^1.7.0",
     "@slack/web-api": "^5.7.0",
-    "@types/pouchdb-node": "^6.1.3",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "fp-ts": "^2.8.5",
@@ -38,9 +37,10 @@
   "devDependencies": {
     "@types/jest": "^25.1.2",
     "@types/node": "12.7.0",
+    "@types/pouchdb-node": "^6.1.3",
     "jest": "^25.1.0",
-    "steno": "^0.5.0",
-    "ts-jest": "^25.2.0",
-    "typescript": "^3.7.5"
+    "prettier": "^2.1.2",
+    "ts-jest": "^25.5.1",
+    "typescript": "^3.9.7"
   }
 }
