--- a/package.json
+++ b/package.json
@@ -26,18 +26,21 @@
     "@slack/events-api": "^2.3.1",
     "@slack/interactive-messages": "^1.7.0",
     "@slack/web-api": "^5.7.0",
+
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "fp-ts": "^2.8.5",
     "io-ts": "^2.2.12",
     "io-ts-promise": "^2.0.2",
     "pouchdb-find": "^7.2.2",
-    "pouchdb-node": "^7.2.2"
+    "pouchdb-node": "^7.2.2",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/jest": "^25.1.2",
     "@types/node": "12.7.0",
     "@types/pouchdb-node": "^6.1.3",
+    "@types/uuid": "^8.3.0",
     "jest": "^25.1.0",
     "prettier": "^2.1.2",
     "ts-jest": "^25.5.1",
