Run as root in deployment

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,6 +2,7 @@ version: "2"
 
 services:
   archivist:
+    user: root
     image: sitapati/slack-archivist:latest
     restart: always
     container_name: slack-archivist
