--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "@slack/interactive-messages": "^1.7.0",
     "@slack/web-api": "^5.7.0",
     "axios": "^0.19.2",
+    "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
     "fp-ts": "^2.8.5",
     "io-ts": "^2.2.12",
     "io-ts-promise": "^2.0.2",
+    "json-colorizer": "^2.2.2",
+    "logform": "^2.2.0",
     "pouchdb-find": "^7.2.2",
     "pouchdb-node": "^7.2.2",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/jest": "^25.1.2",
