--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "io-ts-promise": "^2.0.2",
     "json-colorizer": "^2.2.2",
     "logform": "^2.2.0",
+    "pouchdb-collate": "^7.2.2",
     "pouchdb-find": "^7.2.2",
     "pouchdb-node": "^7.2.2",
-    "uuid": "^3.4.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
