--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@slack/web-api": "^5.7.0",
     "axios": "^0.19.2",
     "chalk": "^3.0.0",
+    "debug": "^3.1.0",
     "dotenv": "^8.2.0",
     "fp-ts": "^2.8.5",
     "io-ts": "^2.2.12",
