--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "bugs": {
     "url": "https://github.com/jwulf/slack-archivist/issues"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsc"
+    }
+  },
   "homepage": "https://github.com/jwulf/slack-archivist#readme",
   "dependencies": {
     "@slack/events-api": "^2.3.1",
@@ -45,6 +50,7 @@
     "@types/node": "12.7.0",
     "@types/pouchdb-node": "^6.1.3",
     "@types/uuid": "^8.3.0",
+    "husky": "^4.3.0",
     "jest": "^25.1.0",
     "prettier": "^2.1.2",
     "ts-jest": "^25.5.1",
