--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,6 +3,7 @@ version: "2"
 services:
   archivist:
     user: root
+    tty: true
     image: sitapati/slack-archivist:latest
     restart: always
     container_name: slack-archivist
