--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^3.0.0",
     "debug": "^3.1.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "fp-ts": "^2.8.5",
     "io-ts": "^2.2.12",
     "io-ts-promise": "^2.0.2",
@@ -44,7 +45,6 @@
     "@types/jest": "^25.1.2",
     "@types/node": "12.7.0",
     "@types/pouchdb-node": "^6.1.3",
-    "@types/uuid": "^8.3.0",
     "husky": "^4.3.0",
     "jest": "^25.1.0",
     "prettier": "^2.1.2",
