--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "debug": "^3.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^2.5.1",
     "fp-ts": "^2.8.5",
     "io-ts": "^2.2.12",
     "io-ts-promise": "^2.0.2",
